# map_zoom_demo

./: .gitignore  INVENTORY_SYSTEM.md  README.md  demo_inventory_system.py  minimal_test.py  pyproject.toml  test_fastapi_inventory.py  test_inventory_imports.py  test_inventory_only.py  test_map_server.py  test_server.py
app/: __init__.py  config.py  main.py  main_final.py  main_fixed.py  main_minimal.py  main_simple.py  main_working.py
app/models/: inventory.py
app/services/: inventory.py
app/storage/: dictionary.py  interface.py
app/templates/: deckgl_map.html  map.html  openlayers_map.html
